Actualizar enlaces en la documentación para usar rutas relativas en JavaDoc y Swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,9 +10,12 @@ springdoc.swagger-ui.enabled=true
 springdoc.api-docs.enabled=true
 
 # Rutas
-springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.path=/swagger-ui/index.html
 springdoc.api-docs.path=/v3/api-docs
 
 # Optional: Customize Swagger UI
 springdoc.swagger-ui.operationsSorter=method
 springdoc.swagger-ui.tagsSorter=alpha
+
+# Server configuration
+server.forward-headers-strategy=framework
